# OpenCTI_MCP_Server

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PROJECT_STRUCTURE.md  README.md  README_EN.md  pyproject.toml
docs/: CLAUDE.MD  README.md
examples/: README.md
opencti_mcp/: __init__.py  client.py  config.py  exceptions.py  observables.py  queries.py  server.py
