[project]
name = "opencti-mcp"
version = "0.1.0"
description = "FastMCP server for retrieving data from OpenCTI."
authors = [
    { name = "Codex" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.13.0.2",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.1",
]

[project.scripts]
opencti-mcp = "opencti_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
